# py-basic-wheels

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  setup.py.bak
.github/workflows/: sdist.yml  wheels.yml
licenses/: superlu6.txt  ug4.txt
