[build-system]
requires = [
    #"setuptools>=42",
    #"scikit-build>=0.3.3",
    "scikit-build-core",
    "cmake>=3.18",
    "ninja",
    "pybind11"
]
#build-backend = "setuptools.build_meta"
build-backend = "scikit_build_core.build"

[project]
name = "ugpip_build_simplest"
version = "0.0.1"

[tool.scikit-build]
#  cf. https://github.com/scikit-build/scikit-build-core

# The versions of CMake to allow. If CMake is not present on the system or does
# not pass this specifier, it will be downloaded via PyPI if possible. An empty
# string will disable this check.
cmake.version = ">=3.15"

#
cmake.args=['-DCMAKE_POSITION_INDEPENDENT_CODE=ON', '-DTARGET=libug4','-DPARALLEL:BOOL=OFF','-DUSE_PYBIND11:BOOL=ON', '-DSTATIC_BUILD:BOOL=ON','-DCPU=1', '-DDIM=2','-DConvectionDiffusion:BOOL=ON' ] 

logging.level = "DEBUG"
