[build-system]
requires = [
    "scikit-build-core",
    "cmake>=3.18",
    "ninja",
    "pybind11"
]
build-backend = "scikit_build_core.build"

[project]
name = "ug4py-base"
version = "0.2.0"
description = "This is a basic python package for UG4."
readme = {file = "README.md", content-type = "text/markdown"}



[tool.scikit-build]
#  cf. https://github.com/scikit-build/scikit-build-core

# The versions of CMake to allow. If CMake is not present on the system or does
# not pass this specifier, it will be downloaded via PyPI if possible. An empty
# string will disable this check.
cmake.version = ">=3.15"

# cmake.args=['-DCMAKE_POSITION_INDEPENDENT_CODE=ON', '-DTARGET=libug4','-DPARALLEL:BOOL=OFF','-DUSE_PYBIND11:BOOL=ON', '-DSTATIC_BUILD:BOOL=ON','-DCPU=1', '-DDIM=2','-DConvectionDiffusion:BOOL=ON', '-DLimex:BOOL=ON' , '-DSuperLU6:BOOL=ON' ] 
cmake.args=['-DCMAKE_POSITION_INDEPENDENT_CODE=ON', '-DTARGET=libug4','-DPARALLEL:BOOL=OFF','-DUSE_PYBIND11:BOOL=ON', '-DSTATIC_BUILD:BOOL=ON','-DDIM="1;2;3"', '-DCPU=1','-DConvectionDiffusion:BOOL=ON', '-DLimex:BOOL=ON', '-DUtil:BOOL=ON'] 

logging.level = "DEBUG"
