[build-system]
requires = [
    "scikit-build-core",
    "cmake>=3.18",
    "ninja",
    "pybind11"
]
build-backend = "scikit_build_core.build"

[project]
name = "ug4py-base"
version = "0.3.2"
description = "This is a basic python package for UG4."
readme = {file = "README.md", content-type = "text/markdown"}



[tool.scikit-build]
#  cf. https://github.com/scikit-build/scikit-build-core

# The versions of CMake to allow. If CMake is not present on the system or does
# not pass this specifier, it will be downloaded via PyPI if possible. An empty
# string will disable this check.
cmake.version = ">=3.15"

# For Windows (static, dim=2;3)
# cmake.args=['-DCMAKE_POLICY_VERSION_MINIMUM=3.5', '-DCMAKE_POSITION_INDEPENDENT_CODE=ON', '-DTARGET=libug4','-DPARALLEL:BOOL=OFF','-DUSE_PYBIND11:BOOL=ON', '-DSTATIC_BUILD:BOOL=ON', '-DDIM="2;3"', '-DCPU=1','-DConvectionDiffusion:BOOL=ON', '-DLimex:BOOL=ON', '-DUtil:BOOL=ON'] 
# For Ubuntu & MacOS (static, dim=ALL)
# cmake.args=['-DCMAKE_POLICY_VERSION_MINIMUM=3.5', '-DCMAKE_POSITION_INDEPENDENT_CODE=ON', '-DTARGET=libug4','-DPARALLEL:BOOL=OFF','-DUSE_PYBIND11:BOOL=ON', '-DSTATIC_BUILD:BOOL=ON', '-DDIM=ALL', '-DCPU=1','-DConvectionDiffusion:BOOL=ON', '-DLimex:BOOL=ON', '-DUtil:BOOL=ON'] 
# For Ubuntu & MacOS (dynamic, dim=ALL)
# cmake.args=['-DCMAKE_POLICY_VERSION_MINIMUM=3.5', '-DCMAKE_POSITION_INDEPENDENT_CODE=ON', '-DTARGET=libug4','-DPARALLEL:BOOL=OFF','-DUSE_PYBIND11:BOOL=ON', '-DSTATIC_BUILD:BOOL=OFF', '-DDIM=ALL', '-DCPU=1','-DConvectionDiffusion:BOOL=ON', '-DLimex:BOOL=ON', '-DUtil:BOOL=ON'] 
cmake.args=['-DCMAKE_POLICY_VERSION_MINIMUM=3.5', '-DCMAKE_POSITION_INDEPENDENT_CODE=ON', '-DTARGET=pyugcore','-DPARALLEL:BOOL=OFF','-DUSE_PYBIND11:BOOL=ON','-DCPU=1', ,'-DConvectionDiffusion:BOOL=OFF', '-DLimex:BOOL=OFF', '-DUtil:BOOL=OFF'] 

logging.level = "DEBUG"

# Explicitly include all cpp
sdist.include = [
  "**/*.cpp"
]
